--- a/style.css
+++ b/style.css
@@ -59,8 +59,12 @@ html {
   color: #454545;
   transition: color 0.3s ease-in-out;
 }
+.menu-mobile img{
+  display: none;
+}
 
 /*Main Page*/
+
 .main-page h1{
   font-family: 'Carrois Gothic', sans-serif;
   font-weight: 100;
@@ -84,8 +88,8 @@ html {
 .button a{
   color: #000000;
 }
-.button{
-  position: relative;
+.button{ 
+ position: relative;
   padding: 1em 1.5em;
   border: none;
   background-color: transparent;
@@ -93,9 +97,8 @@ html {
   font-size: 25px;
   margin-top: 30px;
   font-family: 'Andika';
-  
   &.type1{
-
+    
     &.type1::after,
     &.type1::before{
       content: '';
@@ -192,29 +195,25 @@ html {
   stroke: #fff;
   stroke-width: 2.8;
 }
-
 .circle {
   fill: none;
-  stroke-width: 2.8;
-  
-  animation: progress 1s ease-out forwards;
+  stroke-width: 2.8;  
+}
+.circular-chart:hover{
+  .circle{
+    transition: .3s ease-in-out;
+      animation: progress 1s ease-out forwards;
+    }
+
 }
 
 @keyframes progress {
   0% {
-    stroke-dasharray: 0 100;
+    stroke-dasharray: 0, 100;
   }
 }
 
-.circular-chart.orange .circle {
-  stroke: rgb(81, 45, 202);
-}
-
-.circular-chart.green .circle {
-  stroke: rgb(81, 45, 202);
-}
-
-.circular-chart.blue .circle {
+.circular-chart .circle {
   stroke: rgb(81, 45, 202);
 }
 
@@ -240,6 +239,14 @@ html {
   
   padding-top: 20px;
 }
+.portfolio-page-img figure img{
+  position: relative;
+  filter:grayscale(100);
+  transition: .3s ease-in-out;
+}
+.portfolio-page-img figure:hover img{
+  filter: none;
+}
 
 /*Contacts Page*/
 .contacts-page p{
@@ -262,8 +269,10 @@ html {
     
       .navbar-container {
         display: block;
-        position: relative;
+        position: fixed;
         height: 64px;
+        width: 75%;
+        
       }
     
       .navbar-container input[type="checkbox"] {
@@ -313,6 +322,7 @@ html {
       }
     
       .navbar .menu-items {
+        z-index: 4;
         padding-top: 100px;
         background: #fff;
         height: 100vh;
@@ -332,6 +342,11 @@ html {
         margin-bottom: 1.5rem;
         font-size: 150%;
         font-weight: 30%;
+      }
+      .menu-mobile img{
+        display: inline;
+        width: 30%;
+        margin-top: 100%;
       }
     
       .navbar-container input[type="checkbox"]:checked ~ .menu-items {
@@ -419,9 +434,11 @@ html {
         float: none;
         width: 170px;
         height: 320px;
+        z-index: -1;
       }
       .portfolio-page-img figure{
         text-align: center;
+        z-index: -1;
       }
 
       /*Contacts*/
