--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ html {
         display: block;
         position: fixed;
         height: 64px;
-        width: 75%;
+        width: 100%;
         
       }
     
@@ -322,27 +322,26 @@ html {
         padding-top: 100px;
         background: #fff;
         height: 100vh;
-        max-width: 300px;
         transform: translate(-150%);
         display: flex;
         flex-direction: column;
         margin-left: -40px;
         padding-left: 50px;
         transition: transform 0.5s ease-in-out;
-        /*box-shadow: 5px 0px 10px 0px #000000;*/
-        border-style:none solid none none;
+        /*box-shadow: 5px 0px 10px 0px #000000;
+        border-style: solid ;*/
       }
     
       .navbar .menu-items li {
-        margin-left: 30%;
+        /*margin-left: 30%;*/
         margin-bottom: 1.5rem;
-        font-size: 150%;
+        /*font-size: 150%;*/
         font-weight: 30%;
       }
       .menu-mobile img{
         display: inline;
-        width: 30%;
-        margin-top: 100%;
+        width: 20%;
+        margin-top: 30%;
       }
     
       .open .navbar-container /*input[type="checkbox"]:checked ~*/ .menu-items {
