--- a/style.css
+++ b/style.css
@@ -328,6 +328,7 @@ html {
         margin-left: -40px;
         padding-left: 50px;
         transition: transform 0.5s ease-in-out;
+        text-align: center;
         /*box-shadow: 5px 0px 10px 0px #000000;
         border-style: solid ;*/
       }
